# idswyft-community

./: .community-ignore  .env.community  .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  TRADEMARK.md  docker-compose.build.yml  docker-compose.yml  install.sh  package-lock.json  package.json  renovate.json  uninstall.sh  update.sh
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  docker-publish.yml  sync-community.yml  sync-release.yml
backend/: CHANGELOG.md  Dockerfile  docker-entrypoint.sh  download-models.js  package.json  vitest.config.js
backend/scripts/: encryption-key-rotation.md  mint-service-key.md  mint-service-key.ts  rotate-encryption-key.ts  self-hosted-backups.md  service-key.sh  service-operator-access.md  service-operator-staging-test.md
backend/src/: instrument.ts  server.ts
caddy/: Caddyfile.acme  Caddyfile.manual
engine/: Dockerfile  download-models.js  package-lock.json  package.json  tsconfig.json
engine/src/: instrument.ts  server.ts
frontend/: .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts
frontend/public/: llms-full.txt  llms.txt  robots.txt  sitemap.xml
frontend/scripts/: generate-bgmusic.mjs  generate-keyboard-fx.mjs  generate-narration.mjs  setup-mediapipe.sh
frontend/src/: App.tsx  index.css  main.tsx  theme.ts  vite-env.d.ts
idswyft-vaas/: package-lock.json  package.json
idswyft-vaas/customer-portal/: Dockerfile  index.html  package.json
idswyft-vaas/enterprise-site/: package-lock.json  package.json
idswyft-vaas/platform-admin/: .env.example  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json
idswyft-vaas/status-backend/: Dockerfile  package-lock.json  package.json  railway.json  tsconfig.json
idswyft-vaas/status-page/: Dockerfile  index.html  package-lock.json  package.json  railway.json
idswyft-vaas/vaas-admin/: Dockerfile  index.html  package.json
idswyft-vaas/vaas-backend/: .env.example  CHANGELOG.md  package.json
nginx/: nginx.conf
scripts/: test-e2e-pipeline.sh  test-voice-auth.sh
scripts/models/: export-deepfake-detector.py  requirements.txt
sdks/: README.md
sdks/javascript/: README.md  jest.config.cjs  package-lock.json  package.json
sdks/python/: README.md  pyproject.toml  setup.py
sdks/python/examples/: basic_usage.py
sdks/python/idswyft/: __init__.py  client.py  types.py
sdks/python/tests/: test_integration.py  test_unit.py
sdks/react/: package.json  rollup.config.js  tsconfig.json
shared/: package.json  tsconfig.json
shared/src/: index.ts
sql/: CREATE_TABLES.sql
supabase/migrations/: 12_add_mobile_handoff_sessions.sql  13_add_verification_contexts.sql  14_add_processing_status.sql  15_add_sandbox_columns.sql  16_add_issuing_country.sql  17_add_aml_screening.sql  18_add_risk_scores.sql  (+47 more)
(+673 files in other folders)
